[package]
name = "nexview"
version = "0.1.0"
edition = "2021"
description = "Open-source NEXRAD weather radar viewer written in Rust"

[dependencies]
# GUI
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Networking
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Data parsing
byteorder = "1.5"
bzip2 = "0.5"
flate2 = "1.1"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Math/Geo
nalgebra = "0.33"

# GPU
wgpu = "24"
egui-wgpu = "0.31"
bytemuck = { version = "1", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Misc
anyhow = "1"
poll-promise = { version = "0.3", features = ["tokio"] }

[profile.release]
opt-level = 3
lto = true
